--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,16 @@
 	<groupId>com.herokuapp</groupId>
 	<artifactId>enviadoremail</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>enviadoremail</name>
 	<description>WEB Service Spring Boot para enviar e-mail</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
